# AiIRIS-pdm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dashboard_pen_data.json  figma-sync.config.json  multi_page_pen_data.json  pencil.config.json  pyproject.toml  requirements.txt  test_compliance.py  test_gen.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  figma-console-smoke-manual.yml  nightly-parity.yml
airis_pdm/: __init__.py  cli.py  code_patcher.py  config.py  design_assets.py  dom_extractor.py  dom_extractor_v2.py  figma_console_ws.py  figma_mcp_tools.py  figma_reader.py  generator.py  ir_builder.py  ir_builder_v2.py  naming_engine.py  pencil_mcp_tools.py  pencil_reader.py  theme_manager.py  token_export.py  visual_compliance.py
airis_pdm/assets/: figma_console_bridge.js
airis_pdm/figmai/: __init__.py  chain.py  chain_pipeline.py  chain_remote.py  flow.py  from_figma.py  ir_contract.py  snapshot_anonymizer.py  spec_to_design_ops.py  state_store.py  style_schema.py  ui_ir_to_airis.py
docs/: ARCHITECTURE_CURRENT.md  ARCHITECTURE_REVIEW.md  COMPARISON_V2.md  ERSLICE_INTEGRATION.md  FIGMA_CONSOLE_OPS.md  FLOW_CHECK_完整流程確認.md  FLOW_CHECK_程式流程.md  GENERATE_FLOW.md  INDEX.md  INSIGHT_AiIRIS-tdd_vs_AiIRIS-pdm.md  INTEGRATION_auto-playwright.md  INTEGRATION_webmcp.md  LEGACY_PUSH_PULL.md  OPTIMIZATION_PDM_HUB_FOR_PRODUCT_FLOW.md  PIXEL_RENDERER_COVERAGE.md  PRODUCT_FLOW_AI_PROTOTYPE.md  PUSH_FLOW.md  QUICKSTART_FIGMAI.md  SKILLS_CONTRACT.md  SNAPSHOT_PARITY_PROCESS.md  TASK_STATUS_SUMMARY.md
docs/reports/: FIGMA_CONSOLE_SMOKE_RECORD_SK2lJIGyv1NP3yta1y2WI0.md  FIGMA_CONSOLE_SMOKE_RECORD_TEMPLATE.md  pdm_hub_flow_2026-03-01.md
docs/smartfms/: index.html  package-lock.json  package.json  tailwind.config.cjs
examples/: login-page-payload.json
examples/fms/: pubspec.yaml
figma_output_vue/: App.vue  index.html  package-lock.json  package.json  vite.config.ts
figma_output_vue/components/: CardBG.vue  HomeIndicator.vue  Hugeicons.vue  Icon.vue  IconActive.vue  MaterialSymbols.vue  Tag.vue  UserImage.vue
figma_output_vue/pages/: Nav首頁修改.vue
figma_output_vue/styles/: app.css
figma_plugin/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json
figma_plugin/src/: code.ts  code_v2.ts  figma.d.ts  ui.html
schemas/: ir_schema.json
scripts/: diff_against_baseline.py  regenerate_skills_contract_goldens.py
tests/: __init__.py  test_apply_to_file.py  test_design_assets.py  test_figma_console_ws.py  test_figma_mcp_tools.py  test_figma_plugin_ui.py  test_figmai.py  test_figmai_chain_remote.py  test_figmai_full_pipeline.py  test_figmai_golden_expanded.py  test_figmai_golden_parity.py  test_figmai_ir_contract.py  test_figmai_nightly_parity.py  test_figmai_pixel_coverage.py  test_figmai_skills.py  test_figmai_skills_golden.py  test_generator.py  test_ir_flattening.py  test_naming_engine.py  test_output_matrix.py  test_pencil_integration_e2e.py  test_pencil_mcp_tools.py  test_pencil_reader.py  test_pull_pipeline.py  test_smoke.py  test_storybook_sync.py  test_style_converter.py  test_token_export.py  test_watch_debounce.py
tests/fixtures/: minimal.html
tests/golden/: chain_local_file_trees.json  chain_remote_golden.json  figmai_parity_matrix.json  pixel_blend_clip_node.json  pixel_gradient_shadow_node.json  pixel_image_fill_node.json  pixel_multi_fill_node.json  pixel_multi_shadow_node.json  pixel_stroke_corner_node.json  pixel_text_typography_node.json  skills_aggregate_contracts.json  skills_all_in_one_simple_button.json  skills_anatomy_boundary.json  skills_anatomy_complex_node.json  skills_anatomy_empty_node.json  skills_anatomy_malformed_node.json  skills_anatomy_simple_button.json  skills_api-spec_boundary.json  skills_api-spec_complex_node.json  skills_api-spec_empty_node.json  (+28 more)
(+38 files in other folders)
