[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airis-pdm"
version = "0.1.0"
description = "AiIRIS Project Design Model — Code ↔ Figma bidirectional sync with 100% naming control"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AiIRIS", url = "https://github.com/mingxianliu/AiIRIS-pdm" }]
keywords = ["figma", "design", "vue", "react", "sync", "code-to-design"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "playwright>=1.40",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[project.scripts]
figma-sync = "airis_pdm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["airis_pdm*"]
