[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airis-pdm"
version = "0.5.0"
description = "AiIRIS Project Design Model — Spec → Pencil AI → Fine-tune → React/Vue Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AiIRIS" }]
keywords = ["pencil-ai", "design", "vue", "react", "codegen", "design-to-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "playwright>=1.40",
    "watchdog>=3.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]
legacy = [
    "requests>=2.28",
]

[project.scripts]
pdm = "airis_pdm.cli:main"
figma-sync = "airis_pdm.cli:main"  # deprecated alias

[tool.setuptools.packages.find]
where = ["."]
include = ["airis_pdm*"]
