[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airis-pdm"
version = "0.5.0"
description = "AiIRIS Project Design Model — Spec → Pencil AI → Fine-tune → React/Vue Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AiIRIS" }]
keywords = ["pencil-ai", "design", "vue", "react", "codegen", "design-to-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "playwright>=1.40",
    "watchdog>=3.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]
figma-console = [
    "websockets>=12",
]
legacy = [
    "requests>=2.28",
]

[project.scripts]
aipdm = "airis_pdm.cli:main"
pdm = "airis_pdm.cli:deprecated_main"  # 舊名；請改用 aipdm（避免與 PyPA PDM 混淆）
figma-sync = "airis_pdm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["airis_pdm*"]

[tool.setuptools.package-data]
airis_pdm = ["assets/*.js"]
